# ktngb

./: .gitignore  CMakeLists.txt  main.cpp
include/: cartridge_reader.hpp  constants.hpp  instruction_list.hpp  mytypes.hpp  opcode_reading.hpp  registers.hpp  tools.hpp
res/: output.txt  output_snake.txt
src/: cartridge_reader.cpp  instruction_list.cpp  opcode_reading.cpp
